- Fixes stuck loading screen during Mono/XAudio install - Works on all devices - No effect on gameplay — these commands only run at first boot, container swap, booting screen, not during a game session
FIX:
Now the app just reads one stream from top to bottom. There's nothing to deadlock against because there's only one pipe, one reader, no coordination needed.

Merges stderr into stdout at the OS level — only one pipe. It can never deadlock with itself

Issue:
Wine logging + Mono install = child writes both stdout and stderr simultaneously. Stderr fills its 64 KB OS pipe buffer WHILE the parent is blocked reading stdout → child blocks on write(stderr) → parent never sees stdout EOF → both sides wait forever. process.waitFor() with no timeout means it sits there permanently.

When installing Mono or extracting XAudio DLLs during first boot, some users would get permanently stuck on the loading screen — especially when wine debug logging was turned on, or when setting up a new Proton version.

The root cause was a pipe deadlock: wine writes a large amount of debug output to stderr during installation. The OS pipe buffer (64 KB) would fill up, causing wine to freeze waiting for someone to read it. Meanwhile, the app was waiting for wine to finish — so both sides were stuck waiting on each other, forever.